microservices/update-balance/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: update-balance
spec:
  selector:
    app: update-balance
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
